crates/ty_python_semantic/resources/mdtest/snapshots/sync.md_-_With_statements_-_Context_expression_w…_(718dcfd7e6ed9829).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: sync.md - With statements - Context expression with overlapping possibly-unbound union variants
mdtest path: crates/ty_python_semantic/resources/mdtest/with/sync.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class GoodManager:
 2 |     def __enter__(self) -> str:
 3 |         return "foo"
 4 | 
 5 |     def __exit__(self, exc_type, exc_value, traceback): ...
 6 | 
 7 | class MissingExitManager:
 8 |     def __enter__(self) -> str:
 9 |         return "bar"
10 | 
11 | class NotAContextManager: ...
12 | 
13 | def _(context_expr: GoodManager | MissingExitManager | NotAContextManager):
14 |     # error: [invalid-context-manager] "Object of type `GoodManager | MissingExitManager | NotAContextManager` cannot be used with `with` because the methods `__enter__` and `__exit__` are possibly missing"
15 |     with context_expr as f:
16 |         reveal_type(f)  # revealed: str
```

# Diagnostics

```
error[invalid-context-manager]: Object of type `GoodManager | MissingExitManager | NotAContextManager` cannot be used with `with` because the methods `__enter__` and `__exit__` are possibly missing
  --> src/mdtest_snippet.py:15:10
   |
15 |     with context_expr as f:
   |          ^^^^^^^^^^^^
   |
info: `NotAContextManager` does not implement `__enter__` or `__exit__`
info: `MissingExitManager` does not implement `__exit__`

```
